--- a/ros_yolo_pack/setup.cfg
+++ b/ros_yolo_pack/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/ros_yolo_pack
+script_dir=$base/lib/ros_yolo_pack
 [install]
-install-scripts=$base/lib/ros_yolo_pack
+install_scripts=$base/lib/ros_yolo_pack
